--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.31.0",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.556.0",
-    "recharts": "https://aistudiocdn.com/recharts@^3.5.1"
+    "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
+    "next": "https://aistudiocdn.com/next@^16.0.7",
+    "next/": "https://aistudiocdn.com/next@^16.0.7/"
   }
 }
 </script>
